--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,12 +13,17 @@ input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-pre {
-  font-family: Inconsolata, monospace;
-}
 .faction-name {
   position: relative;
   top: 0.5rem;
+}
+.combat-log {
+  white-space: pre;
+  font-family: Inconsolata, monospace;
+}
+.combat-log .faction-patch {
+  height: 1.25rem;
+  top: 0.2rem;
 }
 .faction-patch {
   float: right;
